--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "eslint ./*.js .tc",
+    "lint": "eslint ./*.ts",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -46,7 +46,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "tslint": "^5.15.0",
+    "typescript": "^3.5.3"
   }
 }
