--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "calendar-project:build"
+            "browserTarget": "calendar-project:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
